fixing alignment issues for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -248,7 +248,23 @@
   border-bottom: 1px solid rgba(2, 178, 204, 1);
 }
 
-@media only screen and (max-width : 600px) {
+@media only screen and (max-width : 1000px) {
+  .App-header {
+    margin-top: 10px;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .App-title a {
+    margin-left: 0;
+    align-self: center;
+  }
+
+  .App-subtitle {
+    margin: 20px 0 0 0;
+    align-self: center;
+  }
+
   .App-body {
     margin-top: 10px;
     text-align: center;
@@ -281,8 +297,10 @@
   }
 
   .About-title h1 {
-    line-height: 2px;
+    line-height: 32px;
     font-size: 30px;
+    padding: 0;
+    margin: 5px;
   }
 
   .About-skills {
